--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,41 @@
     font-family: Arial, Helvetica, sans-serif;
     text-align-last: center; 
 }
-h1,.row{
+body{
+    background-color: #518ea0;
+}
+.container{
+    background-color: #ffffff;
+    box-shadow: 1px 1px 3px #000000;
+    border-radius: 1em;
     padding: 1em;
+    margin-top: 1em;
+}
+h1{
+    padding: 1em;
+}
+.row{
+    margin: 0em 1em;
+}
+.error{
+    border-color: #c92b2b !important;
+    color: #c92b2b;
+    padding-left: 3px;
+}
+.error:focus{
+    box-shadow: 0 0 0 0.2rem rgba(201, 43, 43, .25);
+}
+.error-border{
+    border: solid 0.5px #c92b2b;
+}
+.hidden{
+    visibility: hidden;
 }
 .btn{
     border: none;
     color: #ffffff;
     margin-bottom: 1em;
-    margin-top: -0.5em !important;
+    margin-top: -0.5em;
 }
 .btn:focus{
     color: #ffffff;
